Fix pagination bug where page is resent on pagination due to new list query service. Fix minor style issues on safari.

--- a/client/projects/web/src/app/account-shared/child-components/account-teaser/account-teaser.component.scss
+++ b/client/projects/web/src/app/account-shared/child-components/account-teaser/account-teaser.component.scss
@@ -15,8 +15,4 @@
       }
     }
   }
-
-  .mat-card-content {
-    margin-bottom: 8px;
-  }
 }
